# CMakeList.txt : CMake project for task9, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("task9")

# Add source to this project's executable.
add_executable (task9 "task9.cpp" "task9.h" "turpleN.h" "turpleN.cpp")

# TODO: Add tests and install targets if needed.
